--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="/assets/styles/styles.css">
+  <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 <body>
   <div class="main-container">
-    
+
     <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, veniam!</h1>
-  
+
     <div class="grid-container">
       <div class="box" data-clip="boom.wav">Boom</div>
       <div class="box" data-clip="clap.wav">Clap</div>
@@ -23,17 +23,17 @@
       <div class="box" data-clip="tink.wav">Tink</div>
       <div class="box" data-clip="tom.wav">Tom</div>
     </div>
-  
-    <audio data-clip="boom.wav" src="/assets/sounds/boom.wav"></audio>
-    <audio data-clip="clap.wav" src="/assets/sounds/clap.wav"></audio>
-    <audio data-clip="hihat.wav" src="/assets/sounds/hihat.wav"></audio>
-    <audio data-clip="kick.wav" src="/assets/sounds/kick.wav"></audio>
-    <audio data-clip="openhat.wav" src="/assets/sounds/openhat.wav"></audio>
-    <audio data-clip="ride.wav" src="/assets/sounds/ride.wav"></audio>
-    <audio data-clip="snare.wav" src="/assets/sounds/snare.wav"></audio>
-    <audio data-clip="tink.wav" src="/assets/sounds/tink.wav"></audio>
-    <audio data-clip="tom.wav" src="/assets/sounds/tom.wav"></audio>
+
+    <audio data-clip="boom.wav" src="assets/sounds/boom.wav"></audio>
+    <audio data-clip="clap.wav" src="assets/sounds/clap.wav"></audio>
+    <audio data-clip="hihat.wav" src="assets/sounds/hihat.wav"></audio>
+    <audio data-clip="kick.wav" src="assets/sounds/kick.wav"></audio>
+    <audio data-clip="openhat.wav" src="assets/sounds/openhat.wav"></audio>
+    <audio data-clip="ride.wav" src="assets/sounds/ride.wav"></audio>
+    <audio data-clip="snare.wav" src="assets/sounds/snare.wav"></audio>
+    <audio data-clip="tink.wav" src="assets/sounds/tink.wav"></audio>
+    <audio data-clip="tom.wav" src="assets/sounds/tom.wav"></audio>
   </div>
-  <script src="/assets/scripts/bundle.js" charset="utf-8"></script>
+  <script src="assets/scripts/bundle.js" charset="utf-8"></script>
 </body>
 </html>
