legal feedback, templatize meta

--- a/_dist/index.html
+++ b/_dist/index.html
@@ -8,14 +8,14 @@
   <link rel="icon" href="images/icon.png">
   <link rel="apple-touch-icon" href="assets/images/icon.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-title" content="The Sounds of CZ">
-  <meta name="description" content="Recommended use: during muted client calls, when said clients are acting like real... well, you know, or if you want to pretend she's haunting the coed bathrooms at Mother New York, and on the days you miss her most, when you need a little &quot;shmermp!&quot; to get you by.">
+  <meta name="apple-mobile-web-app-title" content="The Sounds of CZ">
+  <meta name="description" content="Recommended use: during muted client calls, when said clients are acting like real... well, you know, or if you want to pretend she's haunting the coed bathrooms at Mother, and on the days you miss her most, when you need a little &quot;shmermp!&quot; to get you by.">
   <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 <body>
   <div class="main-container">
     <h1>The Sounds of CZ</h1>
-    <h3>Recommended use: during muted client calls, when said clients are acting like real… well, you know, or if you want to pretend she’s haunting the coed bathrooms at Mother New York, and on the days you miss her most, when you need a little "shmermp!" to get you by.</h3>
+    <h3>Recommended use: during muted client calls, when said clients are acting like real... well, you know, or if you want to pretend she's haunting the coed bathrooms at Mother, and on the days you miss her most, when you need a little &quot;shmermp!&quot; to get you by.</h3>
     <div class="grid-container">
       <div class="box" data-clip="bagina.mp3">Bagina</div>
       <div class="box" data-clip="bro.mp3">Bro</div>
